# crosspoint-ioma8

./: .gitignore  AUDIT_FIXES.md  AUDIT_REPORT.md  PDF.md  PDF_CRASH_DEBUG_NOTES.md  PINS.md  PROJECT_INFO.md  README.md  hypotheses.tsv  platformio.ini
.skills/: SKILL.md
docs/contributing/: architecture.md
lib/EpdFont/: CLAUDE.md  FontDecompressor.cpp
lib/Epub/: Epub.cpp  Epub.h
lib/FsHelpers/: FsHelpers.cpp  FsHelpers.h
lib/GfxRenderer/: Bitmap.cpp  BitmapHelpers.cpp  BitmapHelpers.h  FontCacheManager.cpp  FontCacheManager.h  GfxRenderer.cpp  GfxRenderer.h  Utf8CodepointCollector.cpp  Utf8CodepointCollector.h
lib/I18n/: I18n.cpp
lib/InflateReader/: InflateReader.cpp  InflateReader.h
lib/JpegToBmpConverter/: JpegToBmpConverter.cpp
lib/KOReaderSync/: KOReaderCredentialCodec.cpp  KOReaderCredentialCodec.h  KOReaderCredentialStore.cpp  KOReaderCredentialStore.h  KOReaderDocumentId.cpp  KOReaderSyncClient.cpp  ProgressMapper.cpp  ProgressMapper.h
lib/OpdsParser/: OpdsParser.cpp
lib/Pdf/: Pdf.cpp  Pdf.h
lib/PngToBmpConverter/: PngToBmpConverter.cpp
lib/ReaderCore/: PageProgressStore.h  PdfPageNavigation.h  ReaderBookmarkCodec.cpp  ReaderBookmarkCodec.h  ReaderBookmarkStore.cpp  ReaderBookmarkStore.h
rust_mvp/: Cargo.toml  README.md
rust_mvp/.cargo/: config.toml
rust_mvp/src/: lib.rs  main.rs
rust_mvp/tests/: pin_config_tdd.rs
scripts/: build_html.py  debugging_monitor.py  gen_i18n.py  git_branch.py  patch_websockets.py
src/: CrossPointSettings.cpp  CrossPointState.cpp  RecentBooksStore.cpp  WifiCredentialStore.cpp  main.cpp
(+208 files in other folders)
